WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22581
[Transforms] Caps lock indicator in transformed password field fails to draw
https://bugs.webkit.org/show_bug.cgi?id=22581
Summary
[Transforms] Caps lock indicator in transformed password field fails to draw
Simon Fraser (smfr)
Reported
2008-12-01 17:08:53 PST
The caps lock indicator in transformed password field fails to draw correctly, because it's drawn using absoluteContentBox().
Attachments
Patch, changelog.
(1.63 KB, patch)
2008-12-01 20:23 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Testcase
(583 bytes, text/html)
2008-12-01 20:24 PST
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-12-01 20:23:37 PST
Created
attachment 25654
[details]
Patch, changelog. I don't think a LayoutTest is possible; there's no way to simulate Caps Lock from a test.
Simon Fraser (smfr)
Comment 2
2008-12-01 20:24:17 PST
Created
attachment 25655
[details]
Testcase
Simon Fraser (smfr)
Comment 3
2008-12-01 21:01:20 PST
Committed
r38893
M WebCore/ChangeLog M WebCore/rendering/RenderTextControl.cpp
r38893
= dcb0b1648abed960a4378d32b11332fddd00992a (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug