2008-12-01  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=22581

        Fix the painting of the caps lock indicator for transformed text inputs,
        by replacing a call to absoluteContentBox() with code that computes the
        painting rect for the input contents.

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::paint):


Canonical link: https://commits.webkit.org/31100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38893 268f45cc-cd09-0410-ab3c-d52691b4dbfc